# odb4py_1.3.1

./: CMakeLists.txt  README.md  __init__.py  pyproject.toml
bindings/: CMakeLists.txt  core.c  info.c  nc_module.c
bindings/src/: dca_module.c  geo_module.c  io_module.c  meta_module.c  nc_module.c
docs/: open_odb_loop.rst
include/: ncdf.h  odb_types.h  pyspam.h  sql_build.h
utils/: parser.py
